Add overall folder with AddHeader endpoint

--- a/src/Portfolio.API/appsettings.json
+++ b/src/Portfolio.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PortfolioConnection": "Server=localhost\\MSSQLSERVER01;Database=PortfolioDb;Trusted_Connection=True; Encrypt=False"
+  }
+
 }
